# norfair-enough

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  labeler.yml  lint.yml  release-drafter.yml
demos/3d_track/src/: demo.py
demos/alphapose/: setup.py  writer.py
demos/camera_motion/src/: demo.py
demos/colab/: yolo.py
demos/detectron2/src/: demo.py
demos/keypoints_bounding_boxes/src/: demo.py
demos/mmdetection/: mmdetection_cars.py
demos/mmdetection/src/: demo.py
demos/motmetrics4norfair/src/: motmetrics4bytetrack.py  motmetrics4norfair_xyah.py
demos/openpose/src/: demo.py
demos/profiling/src/: demo.py  utils.py
demos/reid/src/: demo.py  utils.py  video_generator.py
demos/yolo_nas/src/: demo.py
demos/yolopv2/src/: demo.py  utils.py
demos/yolov4/src/: demo.py
demos/yolov5/src/: demo.py
demos/yolov7/src/: demo.py
dev/: 404.html  deploy_docs.py  index.html  objects.inv
dev/getting_started/: index.html
dev/reference/: index.html
dev/reference/camera_motion/: index.html
dev/reference/distances/: index.html
dev/reference/drawing/: index.html
dev/reference/filter/: index.html
dev/reference/metrics/: index.html
dev/reference/tracker/: index.html
dev/reference/utils/: index.html
dev/reference/video/: index.html
dev/search/: search_index.json
docs/: deploy_docs.py  getting_started.md
norfair/: __init__.py  camera_motion.py  distances.py  filter.py  kalman_filter.py  metrics.py  tracker.py  utils.py  video.py
norfair/drawing/: __init__.py  color.py  draw_boxes.py  draw_points.py  drawer.py  fixed_camera.py  path.py  utils.py
tests/: mot_metrics.py  test_camera_motion.py  test_distances.py  test_drawing.py  test_tracker.py
