[tool.poetry]
name = "norfair-enough"
version = "2.3.0"
description = "Lightweight Python library for adding real-time multi-object tracking to any detector."
license = "BSD-3-Clause"
authors = ["Tryolabs <hello@tryolabs.com>"]
repository = "https://github.com/akator-de/norfair-enough"
readme = "README.md"
packages = [{include = "norfair"}]
keywords = [
    "tracking",
    "object-detection",
    "object-tracking",
    "kalman-filter",
    "pose-estimation",
    "re-identification",
    "multi-object-tracking",
    "re-id",
    "tracking-algorithm",
    "deepsort",
    "video-tracking",
    "video-inference-loop"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^14.0.1"
scipy = ">=1.13.1"
# Runtime NumPy range supports both 1.23+ and 2.x; MOT overrides to <2 via tox
numpy = ">=1.23.0"
opencv-python = { version = ">= 3.2.0, < 5.0.0", optional = true }
# motmetrics will pull its own pandas dependency
motmetrics = { version = "1.4.0", optional = true }

[tool.poetry.extras]
metrics = ["motmetrics"]
video = ["opencv-python"]

# Test dependencies (Poetry group)
[tool.poetry.group.test.dependencies]
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
pylint = "^3.2.3"
black = "^24.4.1"
isort = "^5.13.2"

 



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
