[project]
name = "norfair-enough"
version = "2.3.0"
description = "Lightweight Python library for adding real-time multi-object tracking to any detector."
license = "BSD-3-Clause"
authors = [
    { name = "Tryolabs", email = "hello@tryolabs.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "tracking",
    "object-detection",
    "object-tracking",
    "kalman-filter",
    "pose-estimation",
    "re-identification",
    "multi-object-tracking",
    "re-id",
    "tracking-algorithm",
    "deepsort",
    "video-tracking",
    "video-inference-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "rich>=14.0.1",
    "scipy>=1.13.1",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
metrics = ["motmetrics==1.4.0"]
video = ["opencv-python>=3.2.0,<5.0.0"]

[project.urls]
Repository = "https://github.com/akator-de/norfair-enough"

[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norfair"]

[tool.ruff]
line-length = 88
extend-exclude = ["demos"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # line length is handled by ruff format

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = false
