[project]
name = "norfair-enough"
version = "2.3.0"
description = "Lightweight Python library for adding real-time multi-object tracking to any detector."
license = "BSD-3-Clause"
authors = [
    { name = "Tryolabs", email = "hello@tryolabs.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "tracking",
    "object-detection",
    "object-tracking",
    "kalman-filter",
    "pose-estimation",
    "re-identification",
    "multi-object-tracking",
    "re-id",
    "tracking-algorithm",
    "deepsort",
    "video-tracking",
    "video-inference-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "rich>=14.0.0",
    "scipy>=1.14.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
metrics = ["motmetrics==1.4.0"]
video = ["opencv-python>=4.2.0,<5.0.0"]

[project.urls]
Repository = "https://github.com/akator-de/norfair-enough"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.29.0",
    "mkdocstrings-python>=1.16.0",
    "mike>=2.1.0",
]
test = [
    "pyrefly>=0.50.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norfair"]

[tool.pyrefly]
project-includes = ["norfair"]
python-version = "3.10"
replace-imports-with-any = [
    "cv2",
    "motmetrics",
    "pandas",
]

# kalman_filter.py is a vendored/adapted Kalman filter with heavy NumPy
# linear algebra that pyrefly cannot yet type-check accurately.
[[tool.pyrefly.sub-config]]
matches = "norfair/kalman_filter.py"

[tool.pyrefly.sub-config.errors]
bad-assignment = false
bad-unpacking = false
missing-attribute = false
no-matching-overload = false
unsupported-operation = false

[tool.ruff]
line-length = 88
extend-exclude = ["demos"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length is handled by ruff format
    "SIM108",  # ternary operator suggestions reduce readability
    "SIM115",  # context manager for open() not always applicable
    "B008",    # function calls in defaults (used for factory pattern)
    "B905",    # zip() strict= is noisy for existing code
]

[tool.ruff.lint.isort]
force-single-line = false
